added func for get tasks status
