# internal/api/gen/oas_parameters_gen.go
@@ -81,6 +81,71 @@ func decodeAddFileToTaskParams(args [1]string, argsEscaped bool, r *http.Request
 	return params, nil
 }
 
+// DownloadTaskArchiveParams is parameters of downloadTaskArchive operation.
+type DownloadTaskArchiveParams struct {
+	TaskId uuid.UUID
+}
+
+func unpackDownloadTaskArchiveParams(packed middleware.Parameters) (params DownloadTaskArchiveParams) {
+	{
+		key := middleware.ParameterKey{
+			Name: "taskId",
+			In:   "path",
+		}
+		params.TaskId = packed[key].(uuid.UUID)
+	}
+	return params
+}
+
+func decodeDownloadTaskArchiveParams(args [1]string, argsEscaped bool, r *http.Request) (params DownloadTaskArchiveParams, _ error) {
+	// Decode path: taskId.
+	if err := func() error {
+		param := args[0]
+		if argsEscaped {
+			unescaped, err := url.PathUnescape(args[0])
+			if err != nil {
+				return errors.Wrap(err, "unescape path")
+			}
+			param = unescaped
+		}
+		if len(param) > 0 {
+			d := uri.NewPathDecoder(uri.PathDecoderConfig{
+				Param:   "taskId",
+				Value:   param,
+				Style:   uri.PathStyleSimple,
+				Explode: false,
+			})
+
+			if err := func() error {
+				val, err := d.DecodeValue()
+				if err != nil {
+					return err
+				}
+
+				c, err := conv.ToUUID(val)
+				if err != nil {
+					return err
+				}
+
+				params.TaskId = c
+				return nil
+			}(); err != nil {
+				return err
+			}
+		} else {
+			return validate.ErrFieldRequired
+		}
+		return nil
+	}(); err != nil {
+		return params, &ogenerrors.DecodeParamError{
+			Name: "taskId",
+			In:   "path",
+			Err:  err,
+		}
+	}
+	return params, nil
+}
+
 // GetTaskStatusParams is parameters of getTaskStatus operation.
 type GetTaskStatusParams struct {
 	TaskId uuid.UUID
